# MyMarket

./: Pipfile  bing_test.html  delete_script.py  index.html  inventario Donde La Karlita.xlsx  package-lock.json  package.json  pyproject.toml  requirements.txt  seed.py  test_image.py  test_vision.py  vercel.json
api/: index.py
migrations/versions/: 0503ac70c8ed_add_cash_session.py  0521a5f0bda1_add_logo_url.py  1157ae9df4ef_add_barcode_to_product.py  2122204fac0a_add_billing_fields_to_business.py  31912e454983_add_business_model_multi_tenancy.py  4e2449010918_add_cost_price_to_product.py  5462ca9240c4_.py  65154bcf24f4_products_and_orders_models.py  742561f77e1f_add_promotion_and_promotionitem_models.py  7cb37216d6f0_add_category_model.py  8b9c0b57b229_.py  d159e31b5920_.py  d3fc37d33b55_add_sii_xml_fields.py  d42a5590cffb_add_min_stock_to_product.py  d9674ba7d481_add_is_promo_default.py  f0da159c70ab_add_payment_method.py  f9af01631342_add_description_to_product.py
public/: Plantilla_Inventario_Zoko.xlsx
src/: app.py  debug_excel.py  promote_superadmin.py
src/api/: commands.py  models.py  routes.py  sii_service.py  utils.py
src/front/: index.css  main.jsx  routes.jsx
src/front/components/: BusinessProfileModal.jsx  Cart.jsx  CheckoutModal.jsx  NotificationBell.jsx  ProductCard.jsx  ProductGrid.jsx  ProtectedRoute.jsx  ReceiptModal.jsx  Sidebar.jsx
src/front/context/: AuthContext.jsx  InventoryContext.jsx
src/front/hooks/: useBarcodeScanner.js
src/front/pages/: AddStock.jsx  Home.jsx  (+10 more)
zoko-mobile/: App.js  app.json  package-lock.json  package.json
(+14 files in other folders)
